- add AppText & Global calss

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -1,5 +1,7 @@
 {
     "Home Screen" : "الصفحة الرئيسية",
     "Change theme" : "تغيير الثيم",
-    "Change Language" : "تغيير اللغة"
+    "Change Language" : "تغيير اللغة",
+    "See more" : "المزيد",
+    "See less" : "اقل"
 }
