ensure that the theme and locale is toggle perfictly

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -3,5 +3,9 @@
     "Change theme" : "تغيير الثيم",
     "Change Language" : "تغيير اللغة",
     "See more" : "المزيد",
-    "See less" : "اقل"
+    "See less" : "اقل",
+    "1.0.0" : "١.٠.٠",
+    "Arabic" : "العربية",
+    "English" : "English",
+    "Select your country" : "اختر بلدك"
 }
