add counter and reset

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -7,5 +7,6 @@
     "1.0.0" : "١.٠.٠",
     "Arabic" : "العربية",
     "English" : "English",
-    "Select your country" : "اختر بلدك"
+    "Select your country" : "اختر بلدك",
+    "Reset" : "إعادة تعيين"
 }
