--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -1,4 +1,5 @@
 {
     "Home Screen" : "Home Screen",
-    "Change theme" : "Change theme"
+    "Change theme" : "Change theme",
+    "Reset" : "Reset"
 }
